[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unstoppable-service"
version = "0.1.0"
description = "Phase 4 scaffold for The Unstoppable Service"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4==4.12.3",
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "requests==2.32.3",
  "uvicorn==0.35.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
